--- a/caff-frontend/src/app/components/header/header.component.html
+++ b/caff-frontend/src/app/components/header/header.component.html
@@ -1,9 +1,11 @@
-
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-        <li class="nav-item active">
+          <li class="nav-item active">
             <a class="nav-link" routerLink="/home">Home</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" routerLink="/caffs">Caffs</a>
           </li>
           <li class="nav-item active">
             <a *ngIf="!app.isLoggedIn" class="nav-link" routerLink="/register">Register</a>
@@ -17,6 +19,6 @@
       </ul>
     </div>
   </nav>
-    
+
 <router-outlet></router-outlet>
 
