cart component updated to change caff amount

--- a/caff-frontend/src/app/components/caff/caff.component.html
+++ b/caff-frontend/src/app/components/caff/caff.component.html
@@ -10,6 +10,6 @@
       Comment: {{comment.comment}}<br/>
     </li>
   </ul>
-  <button class="btn-success" (click)="addCaffToCart()">Kosárba</button>
+  <button class="btn btn-success" (click)="addCaffToCart()">Kosárba</button>
   <br/>
 </div>
