--- a/caff-frontend/src/app/components/header/header.component.html
+++ b/caff-frontend/src/app/components/header/header.component.html
@@ -14,9 +14,13 @@
             <a class="nav-link" routerLink="/login">Login</a>
           </li>
           <li  *ngIf="app.isLoggedIn"  class="nav-item active">
+            <a class="nav-link" routerLink="/cart">Kosár</a>
+          </li>
+
+        <li  *ngIf="app.isLoggedIn"  class="nav-item active">
             <a (click)="app.logout()" class="nav-link" routerLink="/logout">Log out</a>
           </li>
-          <
+
       </ul>
     </div>
   </nav>
