--- a/caff-frontend/src/app/components/caff-list/caff-list.component.html
+++ b/caff-frontend/src/app/components/caff-list/caff-list.component.html
@@ -3,16 +3,12 @@
 <div class="row card-deck">
   <div class="col-3 card" *ngFor="let caff of caffList">
 
-    <div class="card-body">
+
       <h2 class="card-title"> {{caff.name}}</h2>
-      <a [routerLink]="['/caff', caff.id]" class="stretched-link"></a>
       <img class="card-img-top" [src]="caff.preview" alt="Preview of caff"/>
-      <ul class="list-group list-group-flush">
-        <li *ngFor="let comment of caff.comments" class="list-group-item">
-          <b>{{comment.username}}</b>
-          <p>{{comment.comment}}</p>
-        </li>
-      </ul>
+
+    <div class="card-body">
+      <a [routerLink]="['/caff', caff.id]" class="btn btn-primary float-right">Részletek</a>
     </div>
   </div>
 </div>
