--- a/caff-frontend/src/app/components/header/header.component.html
+++ b/caff-frontend/src/app/components/header/header.component.html
@@ -1,34 +1,19 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-          <li class="nav-item active">
-            <a class="nav-link" routerLink="/home">Home</a>
-          </li>
-          <li  *ngIf="authService.isLoggedIn()" class="nav-item active">
-            <a class="nav-link" routerLink="/caffs">Caffs</a>
-          </li>
-
-          <li  *ngIf="!authService.isLoggedIn()" class="nav-item active">
-            <a class="nav-link" routerLink="/login">Login</a>
-          </li>
-          <li *ngIf="authService.isLoggedIn()"  class="nav-item active">
-            <a class="nav-link" routerLink="/cart">Kosár</a>
-          </li>
-  <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+  <div class="collapse navbar-collapse">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item" routerLinkActive="active">
         <a class="nav-link" routerLink="/home">Home</a>
       </li>
-      <li *ngIf="app.isLoggedIn" class="nav-item" routerLinkActive="active">
+      <li *ngIf="authService.isLoggedIn" class="nav-item" routerLinkActive="active">
         <a class="nav-link" routerLink="/caffs">Caffs</a>
       </li>
-      <li *ngIf="!app.isLoggedIn" class="nav-item" routerLinkActive="active">
+      <li *ngIf="!authService.isLoggedIn" class="nav-item" routerLinkActive="active">
         <a class="nav-link" routerLink="/register">Register</a>
       </li>
-      <li *ngIf="!app.isLoggedIn" class="nav-item" routerLinkActive="active">
+      <li *ngIf="!authService.isLoggedIn" class="nav-item" routerLinkActive="active">
         <a class="nav-link" routerLink="/login">Login</a>
       </li>
-      <li *ngIf="app.isLoggedIn" class="nav-item" routerLinkActive="active">
+      <li *ngIf="authService.isLoggedIn" class="nav-item" routerLinkActive="active">
         <a class="nav-link" routerLink="/cart">Kosár</a>
       </li>
 
@@ -36,15 +21,16 @@
   </div>
   <div class="navbar-collapse collapse w-100 order-3 dual-collapse2">
     <ul class="navbar-nav ml-auto">
-      <li class="nav-item dropdown" routerLinkActive="active" >
-      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Profil
-      </a>
-      <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-        <a class="dropdown-item" routerLink="/profile">Személyes adatok</a>
-        <a class="dropdown-item" (click)="app.logout()">Kijelentkezés</a>
-      </div>
-    </li>
+      <li class="nav-item dropdown" routerLinkActive="active">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+           aria-haspopup="true" aria-expanded="false">
+          Profil
+        </a>
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" routerLink="/profile">Személyes adatok</a>
+          <a class="dropdown-item" (click)="authService.logout()">Kijelentkezés</a>
+        </div>
+      </li>
 
     </ul>
   </div>
