--- a/caff-frontend/src/app/components/header/header.component.html
+++ b/caff-frontend/src/app/components/header/header.component.html
@@ -16,6 +16,9 @@
       <li *ngIf="authService.isLoggedIn" class="nav-item" routerLinkActive="active">
         <a class="nav-link" routerLink="/cart">Kosár</a>
       </li>
+      <li *ngIf="authService.isLoggedIn" class="nav-item" routerLinkActive="active">
+        <a class="nav-link" routerLink="/admin">Admin</a>
+      </li>
 
     </ul>
   </div>
