--- a/caff-frontend/src/app/components/admin/admin.component.html
+++ b/caff-frontend/src/app/components/admin/admin.component.html
@@ -5,7 +5,7 @@
       <div class="row">
         <h2 class="col-md-6 my-auto">{{user.username}}</h2>
         <div class="col-md-4 my-auto">
-          <a class="btn btn-primary float-right" [routerLink]="['/profile', user.id]">Edit</a>
+          <a class="btn btn-primary float-right" [routerLink]="['/profile', user.username]">Edit</a>
         </div>
       </div>
     </li>
