user can add comments to caff

--- a/caff-frontend/src/app/components/caff-list/caff-list.component.html
+++ b/caff-frontend/src/app/components/caff-list/caff-list.component.html
@@ -12,3 +12,8 @@
     </div>
   </div>
 </div>
+
+<form>
+  <input type="file" id="file" required="" (change)="handleFileInput($event.target.files)" >
+  <input type="submit" value="Import File" id="" (click)="uploadFile()" />
+</form>
