--- a/caff-frontend/src/app/components/caff/caff.component.html
+++ b/caff-frontend/src/app/components/caff/caff.component.html
@@ -6,7 +6,7 @@
   <ul>
     <li *ngFor="let comment of caff.comments">
       Id: {{comment.id}}<br/>
-      User: {{comment.username}}<br/>
+      User: {{comment.userName}}<br/>
       Comment: {{comment.comment}}<br/>
     </li>
   </ul>
