--- a/caff-frontend/src/app/components/caff-list/caff-list.component.html
+++ b/caff-frontend/src/app/components/caff-list/caff-list.component.html
@@ -1,29 +1,36 @@
-<h1>Caffs</h1>
+<div class="caff-list-container">
+  <h1>Caffs</h1>
 
-<div *ngIf="!caffList" class="spinner-border" role="status">
-  <span class="sr-only">Loading...</span>
-</div>
-<div class="content" *ngIf="caffList">
-  <div class="row card-deck">
 
-    <div class="col-3 card" *ngFor="let caff of caffList">
-      <h2 class="card-title"> {{caff.name}}</h2>
-      <div *ngIf="!caff.preview" class="spinner-border" role="status">
+  <div class="container" >
+    <div class="row justify-content-center">
+      <div *ngIf="!caffList" class="spinner-border" role="status">
         <span class="sr-only">Loading...</span>
       </div>
-      <img *ngIf="caff.preview" class="card-img-top" [src]="caff.preview" alt="Preview of caff"/>
+      <div class="card col-3" *ngFor="let caff of caffList">
+        <h2 class="card-title"> {{caff.name}}</h2>
+        <div class="preview-container">
+          <div *ngIf="!caff.preview" class="spinner-border" role="status">
+            <span class="sr-only">Loading...</span>
+          </div>
+          <img *ngIf="caff.preview" class="card-img-top preview-image" [src]="caff.preview" alt="Preview of caff"/>
+        </div>
 
-      <div class="card-body">
-        <a [routerLink]="['/caff', caff.id]" class="btn btn-primary float-right">Részletek</a>
+        <div class="card-body">
+          <a [routerLink]="['/caff', caff.id]" class="btn btn-primary">Részletek</a>
+        </div>
       </div>
     </div>
-  </div>
 
-  <form>
-    <input type="file" id="file" required="" (change)="handleFileInput($event.target.files)">
-    <input [disabled]="uploading" type="submit" value="Import File" id="" (click)="uploadFile()"/>
-  </form>
-  <span *ngIf="uploading" class="spinner-border" role="status">
-    <span class="sr-only">Loading...</span>
-  </span>
+    <div class="file-upload-container">
+      <form>
+        <input type="file"    accept=".caff" id="file" required="" (change)="handleFileInput($event.target.files)">
+        <input [disabled]="uploading" type="submit" value="Import File" id="" (click)="uploadFile()"/>
+      </form>
+      <span *ngIf="uploading" class="spinner-border" role="status">
+        <span class="sr-only">Loading...</span>
+      </span>
+    </div>
+
+  </div>
 </div>
