--- a/caff-frontend/src/app/components/caff-list/caff-list.component.html
+++ b/caff-frontend/src/app/components/caff-list/caff-list.component.html
@@ -17,15 +17,16 @@
         </div>
 
         <div class="card-body">
-          <a [routerLink]="['/caff', caff.id]" class="btn btn-primary">Részletek</a>
+          <a [routerLink]="['/caff', caff.id]" class="btn btn-primary m-1">Részletek</a>
+          <button *ngIf="authService.isAdmin()" class="btn btn-danger m-1" (click)="deleteCaff(caff)">Delete</button>
         </div>
       </div>
     </div>
 
     <div class="file-upload-container">
       <form>
-        <input type="file"    accept=".caff" id="file" required="" (change)="handleFileInput($event.target.files)">
-        <input [disabled]="uploading" type="submit" value="Import File" id="" (click)="uploadFile()"/>
+        <input type="file"  accept=".caff" id="file" required="" (change)="handleFileInput($event.target.files)">
+        <!--<input [disabled]="uploading" type="submit" value="Import File" id="" (click)="uploadFile()"/>-->
       </form>
       <span *ngIf="uploading" class="spinner-border" role="status">
         <span class="sr-only">Loading...</span>
